--- a/pom.xml
+++ b/pom.xml
@@ -31,19 +31,19 @@
 				<extensions>true</extensions>
 				<configuration>
 					<cloudHubDeployment>
-						<uri>https://anypoint.mulesoft.com</uri>
-						<muleVersion>4.4.0</muleVersion>
-						<!-- Deploy User Parameter -->
-						<username>megha-nandi</username>
-						<password>Lumos@0921</password>
-
-						<environment>Sandbox</environment>
-						<applicationName>book-my-show</applicationName>
-						<businessGroup>Apisero</businessGroup>
-						<workerType>Micro</workerType>
-						<workers>1</workers>
-						<objectStoreV2>true</objectStoreV2>
-					</cloudHubDeployment>
++						<uri>https://anypoint.mulesoft.com</uri>
++						<muleVersion>${mule.version}</muleVersion>
++						<!-- Deploy User Parameter -->
++						<username>${anypoint.username}</username>
++						<password>${anypoint.password}</password>
++
++						<environment>${env}</environment>
++						<applicationName>${appname}</applicationName>
++						<businessGroup>${business}</businessGroup>
++						<workerType>${vCore}</workerType>
++						<workers>${workers}</workers>
++						<objectStoreV2>true</objectStoreV2>
++					</cloudHubDeployment>
 					<sharedLibraries>
 						<sharedLibrary>
 							<groupId>mysql</groupId>
